<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/item_action_bar_simple" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:fillViewport="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"

        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/liSwitch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp52"
                android:layout_marginTop="@dimen/dp8"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swBuy"
                    android:layout_width="285dp"
                    android:layout_height="@dimen/dp52"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp8"

                    android:textColor="@color/gray"
                    android:textOff="@string/buy"
                    android:textOn="@string/Manage"

                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:thumb="@drawable/sw_thumb"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:showText="true"
                    app:track="@drawable/sw_track"
                    tools:layout_editor_absoluteX="74dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/txtManage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Manage"
                    app:layout_constraintHorizontal_bias="0.683"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginLeft="@dimen/dp8"
                android:layout_marginTop="@dimen/dp16"
                android:layout_marginRight="@dimen/dp8"
                android:background="@drawable/bg_item_cards"
                android:paddingLeft="@dimen/dp8"
                android:text="danny.btc"
                android:textColor="@color/textColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/liSwitch" />

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp8"

                android:layout_marginTop="@dimen/dp2"
                android:layout_marginRight="@dimen/dp8"
                android:gravity="left"
                android:text="@string/lucky"
                android:textColor="@color/green"
                android:textSize="14sp"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtUserName" />

            <EditText
                android:id="@+id/edtTransfer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginLeft="@dimen/dp8"
                android:layout_marginTop="@dimen/dp16"
                android:layout_marginRight="@dimen/dp8"
                android:background="@drawable/bg_item_cards"
                android:drawableRight="@drawable/ic_qr"
                android:hint="@string/transfer_to"
                android:paddingLeft="@dimen/dp8"
                android:paddingRight="@dimen/dp8"
                android:textColor="@color/textColor"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtStatus" />

            <EditText
                android:id="@+id/edtDate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginLeft="@dimen/dp8"
                android:layout_marginTop="@dimen/dp16"
                android:layout_marginRight="@dimen/dp8"
                android:background="@drawable/bg_item_cards"
                android:hint="@string/date"
                android:paddingLeft="@dimen/dp8"
                android:textColor="@color/textColor"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtTransfer" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginLeft="@dimen/dp8"
                android:layout_marginTop="@dimen/dp16"
                android:layout_marginRight="@dimen/dp8"
                android:background="@drawable/bg_item_cards"
                android:drawableRight="@drawable/ic_eye"
                android:hint="@string/password"
                android:paddingLeft="@dimen/dp8"
                android:paddingRight="@dimen/dp8"
                android:textColor="@color/textColor"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtDate" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="@dimen/dp200"
                android:layout_height="@dimen/dp44"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp16"
                android:background="@drawable/ic_circle_ripple_background"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtPassword" />

            <TextView
                android:id="@+id/txtHistory"
                android:layout_width="@dimen/dp200"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp8"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:text="@string/History"
                android:textAllCaps="false"
                android:textColor="@color/black"

                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnRegister" />


            <!--    <include
                android:id="@+id/edtLast1"
                layout="@layout/item_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtHistory"
                />

            <include
                android:id="@+id/edtLast2"
                layout="@layout/item_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtLast1"
                />-->


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcHistory"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp180"
                android:layout_marginTop="@dimen/dp8"

                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtHistory"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/test_blue"
        app:itemIconTint="@drawable/bottom_navigation_selector"
        app:itemTextColor="@drawable/bottom_navigation_selector"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>